Fix: add content wrap

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ a {
     padding: 50px;
     justify-content: space-evenly;
     background-color: #ffa1cb;
+    flex-wrap: wrap;
 }
 
 .bannerimg {
@@ -98,12 +99,14 @@ img {
 .card {
     display: flex;
     gap: 32px;
+    flex-wrap: wrap;
 }
 .card1, .card2, .card3, .card4 {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 25px;
+    flex: 1;
 }
 
 .quote {
